--- a/app/src/index.html
+++ b/app/src/index.html
@@ -6,10 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vcraft</title>
 </head>
+<header id="header">
+
+</header>
 
 <body>
-  <div id="app"></div>
+  <div id="app" class="row"></div>
   <script src="./index.tsx"></script>
 </body>
+
+<footer id="footer">
+
+</footer>
 
 </html>
