Added bootstrap css, home component register area toggle.

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Lorem impsum I am description">
+  <meta name="author" content="KKK">
   <title>Vcraft</title>
 </head>
-<header id="header">
-
-</header>
 
 <body>
-  <div id="app" class="row"></div>
+  <header id="header"></header>
+  <div id="app" class="container"></div>
   <script src="./index.tsx"></script>
+
+  <footer id="footer"></footer>
 </body>
-
-<footer id="footer">
-
-</footer>
 
 </html>
